# t200

./: .gitignore  README.md  pyproject.toml
.agent/workflows/: wait.md
docs/archive/: implementation_questions.md  phase3_detailed_design_legacy.md
docs/blueprint/: orchestration_blueprint.md
docs/design/: implementation_directions.md  ocs_conceptual.kl  phase3_design_spec.kl
docs/implementation/: implementation_decisions.md
src/api/: deps.py  legacy_main.py  main.py
src/api/routers/: agents.py  logs.py  stream.py  workflow.py
src/api/routes/: workflow.py
src/cli/: main.py
src/core/agents/: __init__.py  base.py  director.py  gptase.py  lyra.py
src/core/bus/: __init__.py  bus.py  message_bus.py
src/core/db/: __init__.py  models.py  session.py
src/core/llm/: __init__.py  service.py
src/core/workflow/: __init__.py  engine.py  guards.py  state.py
src/ocs/api/: main.py
src/ocs/cli/: main.py
src/ocs/shared/: constants.py  interfaces.py  models.py
src/shared/: __init__.py  config.py  constants.py  models.py
src/ui/src/components/: TaskBoard.tsx
tasks/: 001_consolidate_structure.kl  002_update_readme.kl  003_sanitize_docs.kl  004_sanitize_src.kl
tests/: conftest.py
tests/api/: test_integration.py
tests/core/: test_agent.py  test_bus.py  test_director.py  test_gptase.py  test_lyra.py  test_workflow.py
tests/integration/: test_execution_flow.py  test_system_flow.py
ui/: package-lock.json  vite.config.ts
ui/src/: App.tsx  index.css
